<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <LinearLayout android:layout_width="0dp"
                  android:layout_weight="0.4"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <View android:layout_width="16dp"
              android:layout_height="16dp"
              android:id="@+id/number_coins"
              android:text="@string/number_coins"
              android:layout_marginStart="8dp"
              android:layout_gravity="center_vertical"
              android:background="@color/background_placeholder"
        />
        <View android:layout_width="25dp"
              android:layout_height="25dp"
              android:id="@+id/icon_coin"
              android:layout_marginVertical="16dp"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"
              android:background="@color/background_placeholder"
        />
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_gravity="center_vertical">
            <View android:layout_width="64dp"
                  android:layout_height="16dp"
                  android:text="@string/coin_full_name"
                  android:textStyle="bold"
                  android:textSize="16sp"
                  android:background="@color/background_placeholder"
            />

            <View android:layout_width="64dp"
                  android:layout_height="16dp"
                  android:text="@string/coin_short_name"
                  android:textSize="16sp"
                  android:layout_marginTop="2dp"
                  android:background="@color/background_placeholder"
            />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
                  android:layout_weight="0.20"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_gravity="center_vertical">
        <View android:layout_width="64dp"
              android:layout_height="16dp"
              android:text="@string/coin_full_name"
              android:textStyle="bold"
              android:textSize="16sp"
              android:background="@color/background_placeholder"
        />
    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
                  android:layout_weight="0.20"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_gravity="center_vertical">
        <View android:layout_width="64dp"
              android:layout_height="16dp"
              android:text="@string/coin_full_name"
              android:textStyle="bold"
              android:textSize="16sp"
              android:background="@color/background_placeholder"
        />
    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
                  android:layout_weight="0.20"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical">
        <View android:layout_width="match_parent"
              android:layout_height="16dp"
              android:id="@+id/tt"
              android:text="@string/coin_percent"
              android:textStyle="bold"
              android:textSize="16sp"
              android:layout_marginEnd="8dp"
              android:layout_marginStart="8dp"
              android:background="@color/background_placeholder"
        />
    </LinearLayout>
</LinearLayout>