<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <LinearLayout android:layout_width="0dp"
                  android:layout_weight="0.4"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/number_coins"
                  android:text="@string/number_coins"
                  android:layout_marginStart="8dp"
                  android:layout_gravity="center_vertical"
        />
        <ImageView android:layout_width="25dp"
                   android:layout_height="25dp"
                   android:id="@+id/icon_coin"
                   android:src="@drawable/placeholder_circle"
                   android:layout_marginVertical="16dp"
                   android:layout_marginStart="8dp"
                   android:layout_marginEnd="8dp"
        />
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_gravity="center_vertical">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/full_name_coin"
                      android:text="@string/coin_full_name"
                      android:textStyle="bold"
                      android:textSize="14sp"
            />

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/short_name_coin"
                      android:text="@string/coin_short_name"
                      android:textSize="14sp"
            />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
                  android:layout_weight="0.2"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_gravity="center_vertical">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/price"
                  android:text="@string/coin_full_name"
                  android:textStyle="bold"
                  android:textSize="14sp"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="0dp"
                  android:layout_weight="0.2"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_gravity="center_vertical">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/full_price"
                  android:text="@string/coin_short_name"
                  android:textSize="14sp"
        />
    </LinearLayout>
    <LinearLayout android:layout_width="0dp"
                  android:layout_weight="0.2"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/change"
                  android:text="@string/coin_percent"
                  android:textStyle="bold"
                  android:textSize="14sp"
                  android:textAlignment="viewEnd"
                  android:layout_marginEnd="8dp"
                  android:layout_marginStart="8dp"
        />
    </LinearLayout>
</LinearLayout>