<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   tools:context=".coins.ui.CoinsFragment">

    <LinearLayout android:layout_width="0dp"
                  android:id="@+id/topPanel"
                  android:layout_height="wrap_content"
                  android:background="@color/purple_700"
                  android:paddingVertical="16dp"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:weightSum="1"
                  android:orientation="horizontal"
    >
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:textColor="@android:color/white"
                  android:layout_weight="0.4"
                  android:textStyle="bold"
                  android:textSize="12sp"
                  android:paddingStart="8dp"
                  android:text="@string/cryptocurrency"/>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.20"
                      android:id="@+id/sort_price_view"
        android:orientation="horizontal">
            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.8"
                      android:textColor="@android:color/white"
                      android:textSize="12sp"
                      android:textStyle="bold"
                      android:paddingStart="4dp"
                      android:textAlignment="viewStart"
                      android:text="@string/price"/>
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
                       android:layout_gravity="center_vertical"
                       android:layout_weight="0.2"
                       android:src="@android:drawable/arrow_down_float"
                       android:id="@+id/sort_price_icon"
            android:visibility="gone"/>
        </LinearLayout>

         <LinearLayout android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="0.20"
                       android:id="@+id/sort_mastercap_view"
         android:orientation="horizontal">
             <TextView android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="0.8"
                       android:textColor="@android:color/white"
                       android:textStyle="bold"
                       android:paddingStart="4dp"
                       android:textSize="12sp"
                       android:textAlignment="viewStart"
                       android:text="@string/masterCap"/>
             <ImageView android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:layout_gravity="center_vertical"
             android:src="@android:drawable/arrow_down_float"
             android:id="@+id/sort_mastercap_icon"/>
         </LinearLayout>

        <LinearLayout android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="0.2"
                      android:paddingEnd="8dp"
                      android:id="@+id/sort_24h_view"
        android:orientation="horizontal">
            <TextView android:layout_width="0dp"
                      android:layout_weight="0.8"
                      android:layout_height="wrap_content"
                      android:textColor="@android:color/white"
                      android:textStyle="bold"
                      android:textSize="12sp"
                      android:textAlignment="viewEnd"

                      android:text="@string/hours"/>
            <ImageView android:layout_width="wrap_content"
                       android:id="@+id/sort_24h_icon"
                       android:layout_height="wrap_content"
                       android:layout_weight="0.2"
                       android:layout_gravity="center_vertical"
                       android:src="@android:drawable/arrow_down_float"
            android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView android:layout_width="0dp"
                                               android:layout_height="0dp"
                                               android:id="@+id/rv_coins"
                                               android:clipToPadding="false"
                                               app:layout_constraintTop_toBottomOf="@id/topPanel"
                                               app:layout_constraintBottom_toBottomOf="parent"
                                               app:layout_constraintStart_toStartOf="parent"
                                               app:layout_constraintEnd_toEndOf="parent"
                                               tools:listitem="@layout/li_coins"/>

    <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/topPanel"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:shimmer_duration="800">

        <!-- Adding 7 rows of placeholders -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <include layout="@layout/li_coins_placeholder"/>
            <include layout="@layout/li_coins_placeholder"/>
            <include layout="@layout/li_coins_placeholder"/>
            <include layout="@layout/li_coins_placeholder"/>
            <include layout="@layout/li_coins_placeholder"/>
            <include layout="@layout/li_coins_placeholder"/>
            <include layout="@layout/li_coins_placeholder"/>
        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>